sfSandBoxCode/force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <displayFormat>CONTRACT-{00000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>