sfSandBoxCode/force-app/main/default/objects/Contract__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <description>Total Amount Payable to Contractor</description>
    <inlineHelpText>Total Amount Payable to Contractor (Payment amount plus allowances, bonuses, etc)</inlineHelpText>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>