sfSandBoxCode/force-app/main/default/objects/Contract__c/fields/Job_Spec_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Job_Spec_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Spec Assignment</label>
    <referenceTo>Casuals_Job_Assignment__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>