sfSandBoxCode/force-app/main/default/objects/Contract__c/fields/Payment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rate__c</fullName>
    <label>Payment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>