sfSandBoxCode/force-app/main/default/objects/Contract__c/fields/Payment_Rate_Units__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rate_Units__c</fullName>
    <label>Payment Rate Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Week</fullName>
            </value>
            <value>
                <fullName>Per Month</fullName>
            </value>
            <value>
                <fullName>Per Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>