sfSandBoxCode/force-app/main/default/objects/Contract__c/recordTypes/ContractorRecordType.recordType-meta.xml
<RecordType>
    <fullName>ContractorRecordType</fullName>
    <active>true</active>
    <description>Record type for Contractor Jobs</description>
    <label>JobAssignmentContract</label>
</RecordType>