sfSandBoxCode/force-app/main/default/objects/Contract__c/recordTypes/PurchaseRecordType.recordType-meta.xml
<RecordType>
    <fullName>PurchaseRecordType</fullName>
    <active>true</active>
    <description>Record type for purchase order items</description>
    <label>PurchaseContract</label>
</RecordType>